transiciones + espacio entre proyectos

--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#about" class="about-li">Acerca de mí</a></li>
+        <li><a href="#skills" class="skills-li">Mis habilidades</a></li>
         <li><a href="#portfolio" class="portfolio-li">Portafolio</a></li>
         <li><a href="#contact" class="contact-li">Contáctame</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="#about" class="about-li">Acerca de mí</a></li>
+        <li><a href="#skills" class="skills-li">Mis habilidades</a></li>
         <li><a href="#portfolio" class="portfolio-li">Portafolio</a></li>
         <li><a href="#contact" class="contact-li">Contáctame</a></li>
       </ul>
     </div>
   </nav>
 
-  <div class="row valign-wrapper">
+  <div class="row valign-wrapper titles">
     <div class="col s12">
       <h1 class="title center-align">Hola, soy Massiel</h1>
       <h2 class="subtitle center-align">Bienvenido a mi portafolio</h2>
@@ -50,7 +52,7 @@
   </div>
 </section>
 
-<section class="skills valign-wrapper">
+<section class="skills valign-wrapper" id="skills">
   <div class="container skills-container center-align">
       <div class="row">
       <div class="col s12">
@@ -110,6 +112,7 @@
       </div>
       <div class="col l4 s12 center-align">
         <h3>AppLove site</h3>
+        <p class="project-description">Proyecto enfocado en replicar un sitio web</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/AppLove/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/AppLove" target="_blank">CÓDIGO</a>
       </div>
@@ -119,7 +122,8 @@
   <div class="row">
     <div class="site2">
       <div class="col l4 center-align show-on-medium-and-up hide-on-med-and-down">
-        <h3 class="show-on-medium-and-up hide-on-med-and-down">Gunpla is love</h3>
+        <h3 class="show-on-medium-and-up hide-on-med-and-down">Gunpla is love ♥</h3>
+        <p class="project-description">Proyecto enfocado en crear un sitio web utilizando un sistema de grillas que no pertenezca a un framework como Materialize o Bootstrap</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/gunpla-page/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/gunpla-page" target="_blank">CÓDIGO</a>
       </div>
@@ -127,7 +131,8 @@
         <img src="assets/img/sites/site2.jpg" alt="" class="responsive-img">
       </div>
       <div class="col s12 center-align show-on-small hide-on-med-and-up">
-        <h3 class="show-on-small hide-on-med-and-up">Gunpla is love</h3>
+        <h3 class="show-on-small hide-on-med-and-up">Gunpla is love ♥</h3>
+        <p class="project-description">Proyecto enfocado en crear un sitio web utilizando un sistema de grillas que no pertenezca a un framework como Materialize o Bootstrap</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/gunpla-page/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/gunpla-page" target="_blank">CÓDIGO</a>
       </div>
@@ -141,6 +146,7 @@
       </div>
       <div class="col l4 s12 center-align">
         <h3>Lyft</h3>
+        <p class="project-description">Proyecto enfocado en replicar un sitio web</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/lyft1/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/lyft1" target="_blank">CÓDIGO</a>
       </div>
@@ -148,9 +154,10 @@
   </div>
 
   <div class="row">
-    <div class="site2">
+    <div class="site4">
       <div class="col l4 center-align show-on-medium-and-up hide-on-med-and-down">
         <h3 class="show-on-medium-and-up hide-on-med-and-down">Start Bootstrap</h3>
+        <p class="project-description">Proyecto enfocado en replicar un sitio web</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/freelancer1/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/freelancer1" target="_blank">CÓDIGO</a>
       </div>
@@ -159,19 +166,21 @@
       </div>
       <div class="col s12 center-align show-on-small hide-on-med-and-up">
         <h3 class="show-on-small hide-on-med-and-up">Start Bootstrap</h3>
+        <p class="project-description">Proyecto enfocado en replicar un sitio web</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/freelancer1/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/freelancer1" target="_blank">CÓDIGO</a>
       </div>
     </div>
   </div>
 
-    <div class="row">
-    <div class="site1">
+  <div class="row">
+    <div class="site5">
       <div class="col l8 s12 project1">
         <img src="assets/img/sites/site5.jpg" alt="" class="responsive-img">
       </div>
       <div class="col l4 s12 center-align">
         <h3>Dark Sky Weather</h3>
+        <p class="project-description">Proyecto enfocado en el uso de múltiples APIs en una misma página web. Las APIs que se utilizaron fueron la de Google Maps, Unsplash y Dark sky weather</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/dsweather/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/dsweather" target="_blank">CÓDIGO</a>
       </div>
@@ -179,9 +188,9 @@
   </div>
 </section>
 
-<section class="contact valign-wrapper center-align" id="contact">
+<section class="contact center-align" id="contact">
   <div class="row">
-    <div class="col s12">
+    <div class="col s12 center-align">
       <h2 class="contact-title center-align">Contáctame</h2>
       <p class="contact-info">Si deseas que trabajemos juntos, puedes encontrarme en las siguientes redes</p>
       <a href="https://www.linkedin.com/in/massielams/"><i class="fab fa-linkedin-in icon"></i></a>
@@ -191,10 +200,10 @@
   </div>
 </section>
 
-<footer class="valign-wrapper center-align">
+<footer class=" center-align">
   <div class="row">
     <div class="col s12">
-      <p class="copyright">Copyright ♥ Massielcilla</p>
+      <p class="copyright center-align">Copyright ♥ Massielcilla</p>
     </div>
   </div>
 </footer>
