logo + button up

--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
   <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+  <link rel="shortcut icon" href="assets/img/heart-01.png">
   <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
-  <title>Portfolio</title>
+  <title>~massielcilla.</title>
 </head>
 <body>
   <section class="welcome" id="welcome">
     <nav class="nav-bar">
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Logo</a>
+      <a href="#!" class="brand-logo"><img src="assets/img/logo-white.png" alt="" class="responsive-img logo-img"></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#about" class="about-li">Acerca de mí</a></li>
@@ -207,6 +208,10 @@
     </div>
   </div>
 </footer>
+
+<a href="#" class="back-to-top z-depth-1">
+  <i class="fas fa-chevron-up icon-up"></i>
+</a>
   
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
