--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kalam:400,700" rel="stylesheet">
   <link rel="shortcut icon" href="assets/img/heart-01.png">
   <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
@@ -47,8 +47,8 @@
       <img src="assets/img/cherry5.jpg" class="responsive-img profile circle" alt="">
     </div>
     <div class="col m8 s12">
-      <h3 class="center-align">Soy Massiel, ¡un gusto!</h3>
-      <p class="center-align">Soy una front-end developer, actualmente viviendo en Santiago de Chile. Disfruto de codear al mismo tiempo que tomar en cuenta el diseño de interfaces y la experiencia del usuario. Me gusta el trabajo en equipo y resolver problemas de lógica. Me considero una persona bastante paciente y curiosa, siempre estoy buscando algo nuevo que hacer o aprender. En mi tiempo libre me gusta escuchar música, cocinar o armar maquetas. ¡Trabajemos juntos!</p>
+      <h3 class="center-align greeting-title">Soy Massiel, ¡un gusto!</h3>
+      <p class="center-align">Soy una front-end developer, actualmente viviendo en Santiago de Chile. Disfruto de codear al mismo tiempo que tomar en cuenta el diseño de interfaces y la experiencia del usuario. Me gusta el trabajo en equipo y resolver problemas de lógica. Me considero una persona bastante paciente y curiosa, siempre estoy buscando algo nuevo que hacer o aprender. En mi tiempo libre me gusta escuchar música, cocinar o armar maquetas, ¡Trabajemos juntos!</p>
     </div>
   </div>
 </section>
@@ -112,7 +112,7 @@
         <img src="assets/img/sites/site1.jpg" alt="" class="responsive-img">
       </div>
       <div class="col l4 s12 center-align">
-        <h3>AppLove site</h3>
+        <h3 class="applove-title">AppLove site</h3>
         <p class="project-description">Proyecto enfocado en replicar un sitio web</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/AppLove/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/AppLove" target="_blank">CÓDIGO</a>
@@ -123,7 +123,7 @@
   <div class="row">
     <div class="site2">
       <div class="col l4 center-align show-on-medium-and-up hide-on-med-and-down">
-        <h3 class="show-on-medium-and-up hide-on-med-and-down">Gunpla is love ♥</h3>
+        <h3 class="show-on-medium-and-up hide-on-med-and-down gunpla-title">Gunpla is love ♥</h3>
         <p class="project-description">Proyecto enfocado en crear un sitio web utilizando un sistema de grillas que no pertenezca a un framework como Materialize o Bootstrap</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/gunpla-page/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/gunpla-page" target="_blank">CÓDIGO</a>
@@ -132,7 +132,7 @@
         <img src="assets/img/sites/site2.jpg" alt="" class="responsive-img">
       </div>
       <div class="col s12 center-align show-on-small hide-on-med-and-up">
-        <h3 class="show-on-small hide-on-med-and-up">Gunpla is love ♥</h3>
+        <h3 class="show-on-small hide-on-med-and-up gunpla-title">Gunpla is love ♥</h3>
         <p class="project-description">Proyecto enfocado en crear un sitio web utilizando un sistema de grillas que no pertenezca a un framework como Materialize o Bootstrap</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/gunpla-page/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/gunpla-page" target="_blank">CÓDIGO</a>
@@ -146,7 +146,7 @@
         <img src="assets/img/sites/site3.jpg" alt="" class="responsive-img">
       </div>
       <div class="col l4 s12 center-align">
-        <h3>Lyft</h3>
+        <h3 class="lyft-title">Lyft</h3>
         <p class="project-description">Proyecto enfocado en replicar un sitio web</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/lyft1/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/lyft1" target="_blank">CÓDIGO</a>
@@ -157,7 +157,7 @@
   <div class="row">
     <div class="site4">
       <div class="col l4 center-align show-on-medium-and-up hide-on-med-and-down">
-        <h3 class="show-on-medium-and-up hide-on-med-and-down">Start Bootstrap</h3>
+        <h3 class="show-on-medium-and-up hide-on-med-and-down bootstrap-title">Start Bootstrap</h3>
         <p class="project-description">Proyecto enfocado en replicar un sitio web</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/freelancer1/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/freelancer1" target="_blank">CÓDIGO</a>
@@ -166,7 +166,7 @@
         <img src="assets/img/sites/site4.jpg" alt="" class="responsive-img">
       </div>
       <div class="col s12 center-align show-on-small hide-on-med-and-up">
-        <h3 class="show-on-small hide-on-med-and-up">Start Bootstrap</h3>
+        <h3 class="show-on-small hide-on-med-and-up bootstrap-title">Start Bootstrap</h3>
         <p class="project-description">Proyecto enfocado en replicar un sitio web</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/freelancer1/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/freelancer1" target="_blank">CÓDIGO</a>
@@ -180,7 +180,7 @@
         <img src="assets/img/sites/site5.jpg" alt="" class="responsive-img">
       </div>
       <div class="col l4 s12 center-align">
-        <h3>Dark Sky Weather</h3>
+        <h3 class="darksky-title">Dark Sky Weather</h3>
         <p class="project-description">Proyecto enfocado en el uso de múltiples APIs en una misma página web. Las APIs que se utilizaron fueron la de Google Maps, Unsplash y Dark sky weather</p>
         <a class="waves-effect waves-light btn" href="https://massienderella.github.io/dsweather/" target="_blank">DEMO</a>
         <a class="waves-effect waves-light btn" href="https://github.com/massienderella/dsweather" target="_blank">CÓDIGO</a>
